<resources>
    <string name="app_name">CantusCodex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_events">Events</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_song">New Song</string>


    <!-- Strings related to login -->
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="menu_new_event">New Event</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_song_details">Song Details</string>
    <string name="menu_event_details">Event Details</string>
    <string name="menu_bookmarked_events">Bookmarked Events</string>
    <string name="event_image">Event Image</string>
    <string name="name">Name</string>
    <string name="organizers">Organizers</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="bookmark">Bookmark</string>
    <string name="admin">Admin</string>
    <string name="application_deadline">Application deadline</string>
    <string name="start_date">Start Date</string>
    <string name="is_starting_in_one_hour_better_start_preparing_to_leave">Is starting in one hour, better start preparing to leave</string>
    <string name="error">Error</string>
    <string name="text_user">User</string>
    <string name="please_select_a_event">Please select a event</string>
    <string name="menu_location">Location</string>
    <string name="location">Location</string>


</resources>