<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cantuscodex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_songs"
        android:name="com.example.cantuscodex.ui.songs.SongsFragment"
        android:label="@string/menu_songs"
        tools:layout="@layout/fragment_songs" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.cantuscodex.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.cantuscodex.ui.login.LoginFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_new_song"
        android:name="com.example.cantuscodex.ui.newSong.NewSongFragment"
        android:label="@string/menu_new_song"
        tools:layout="@layout/fragment_new_song" />



</navigation>